@@ -307,6 +307,7 @@ typedef struct ca_db_st
 BIGNUM *load_serial(char *serialfile, int create, ASN1_INTEGER **retai);
 int save_serial(char *serialfile, char *suffix, BIGNUM *serial, ASN1_INTEGER **retai);
 int rotate_serial(char *serialfile, char *new_suffix, char *old_suffix);
+int rand_serial(BIGNUM *b, ASN1_INTEGER *ai);
 CA_DB *load_index(char *dbfile, DB_ATTR *dbattr);
 int index_index(CA_DB *db);
 int save_index(char *dbfile, char *suffix, CA_DB *db);
@@ -334,5 +335,7 @@ X509_NAME *do_subject(char *str, long chtype);
 #define NETSCAPE_CERT_HDR	"certificate"
 
 #define APP_PASS_LEN	1024
+
+#define SERIAL_RAND_BITS	64
 
 #endif
